Priority group descriptions
Implemented move up and down

--- a/src/main.css
+++ b/src/main.css
@@ -86,9 +86,18 @@ body {
     fill: #DECF3F;
 }
 .priorityLine.slack {
-    stroke: #b0b0b0;
+    stroke: #d8d8d8;
+    stroke-dasharray: 1,4;
+    stroke-width: 1;
+}
+
+
+/* priority groups */
+.priorityGroupBox {
+    stroke: #a0a0a0;
     stroke-dasharray: 5,5;
     stroke-width: 1;
+    fill: none;
 }
 
 .hidden {
