Implemented change priority group priority functionality

--- a/src/main.css
+++ b/src/main.css
@@ -86,16 +86,16 @@ body {
     fill: #DECF3F;
 }
 .priorityLine.slack {
-    stroke: #d8d8d8;
-    stroke-dasharray: 1,4;
+    stroke: #b8b8b8;
+    stroke-dasharray: 5,5;
     stroke-width: 1;
 }
 
 
 /* priority groups */
 .priorityGroupBox {
-    stroke: #a0a0a0;
-    stroke-dasharray: 5,5;
+    stroke: #b8b8b8;
+    stroke-dasharray: 1,4;
     stroke-width: 1;
     fill: none;
 }
