--- a/src/main.css
+++ b/src/main.css
@@ -21,6 +21,45 @@ body {
     width: 90%;
 }
 
+/* Download dialog */
+.fileDialog{
+    display: block;
+    width: 20em;
+    margin: auto;
+    margin-top: 10%;
+
+    border: 2px solid #888;
+    background-color: rgba(248, 248, 248, 0.95);
+    border-radius: 3px;
+    color: #444;
+    text-align: center;
+
+    padding: 1em;
+}
+.downloadDialogButton {
+    display: block;
+    width: 100%;
+    padding: 2px;
+    margin: 2px;
+    border: 1px solid #888;
+    border-radius: 3px;
+
+    font-size: small;
+    background-color: hsl(180, 30%, 95%);
+    color: #444;
+}
+.modal {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.1);
+}
+
 /* Page */
 .trakMapPage { 
     width: 100%;
