--- a/src/main.css
+++ b/src/main.css
@@ -36,15 +36,25 @@ body {
 
     padding: 1em;
 }
-.downloadDialogButton {
+.downloadDialogButton,.downloadDialogButtonInactive {
     display: block;
     width: 100%;
     padding: 2px;
     margin: 2px;
-    border: 1px solid #888;
     border-radius: 3px;
-
     font-size: small;
+
+    border: 1px solid #888;
+    background-color: hsl(180, 30%, 95%);
+    color: #444;
+}
+.downloadDialogButtonInactive {
+    border: 1px solid #CCC;
+    background-color: hsl(180, 30%, 98%);
+    color: #DDD;
+}
+.downloadDialogButton {
+    border: 1px solid #888;
     background-color: hsl(180, 30%, 95%);
     color: #444;
 }
