--- a/src/main.css
+++ b/src/main.css
@@ -123,7 +123,7 @@ body {
 }
 
 /* date bubbles */
-.dateBubble circle, .milestone path{
+.dateBubbleCircle, .milestone path {
     fill: white;
     stroke: black;
 }
@@ -135,14 +135,14 @@ body {
     stroke-width: 4;
     fill: none;
 }
-.dateBubble .dateBubbleCircle.complete
-.dateBubble .dateBubbleCircle.on-track {
+.dateBubbleCircle.complete
+.dateBubbleCircle.on-track {
     fill: white;
 }
-.dateBubble .dateBubbleCircle.at-risk {
+.dateBubbleCircle.at-risk {
     fill:#ffffaa;
 }
-.dateBubble .dateBubbleCircle.late {
+.dateBubbleCircle.late {
     fill: #ffaaaa;
 }
 /* .dateBubble .complete {
@@ -235,6 +235,38 @@ body {
     stroke: #b8b8b8;
     stroke-dasharray: 5,5;
     stroke-width: 1;
+}
+
+.percentageRect.priorityLine {
+    fill: white;
+    stroke-width: 3;
+}
+.percentageRect.priorityLine.complete {
+    fill: white;
+}
+.percentageRect.priorityLine.priority-0 {
+    fill: #F15854;
+}
+.percentageRect.priorityLine.priority-1 {
+    fill: #5DA5DA;
+}
+.percentageRect.priorityLine.priority-2 {
+    fill: #FAA43A;
+}
+.percentageRect.priorityLine.priority-3 {
+    fill: #60BD68;
+}
+.percentageRect.priorityLine.priority-4 {
+    fill: #F17CB0;
+}
+.percentageRect.priorityLine.priority-5 {
+    fill: #B2912F;
+}
+.percentageRect.priorityLine.priority-6 {
+    fill: #B276B2;
+}
+.percentageRect.priorityLine.priority-7 {
+    fill: #DECF3F;
 }
 
 
