Make slack dependencies click area thicker.
Fixes #27 (likely)

--- a/docs/main.css
+++ b/docs/main.css
@@ -261,6 +261,17 @@ body {
     stroke-width: 1;
 }
 
+.priorityLine.slackBG {
+    stroke: rgba(255, 255, 255, 0);
+    stroke-width: 5;
+}
+
+.priorityLine.slackBG:hover {
+    stroke: #b8b8b8;
+    stroke-dasharray: 5, 5;
+    stroke-width: 4;
+}
+
 .percentageRect {
     fill: #B8B8B8;
 }
